<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/enterArticulationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_articulation_field"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/articulationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="text"
            android:layout_weight="1">

            <requestFocus />
        </EditText>
        
        <Button
        android:id="@+id/addArticulationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_articulation_button" 
        android:textSize="17sp"/>
        

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/articulationsTextView"
            android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
            android:text="@string/articulations_list"
            android:textSize="12sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/internal"
            android:text="@string/internal"
            android:textSize="11sp"
             />
        <TextView
            android:id="@+id/display"
            android:text="@string/display"
            android:textSize="11sp" />
    </TableRow>
    
   <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/representaion1"
            android:text="@string/representation"
            android:textSize="11sp"
             />
        <TextView
            android:id="@+id/representation2"
            android:text="@string/representation"
            android:textSize="11sp" />
    </TableRow>
    
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/articulationsScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2" >

            <TableLayout
                android:id="@+id/articulationsTableView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" 
                android:stretchColumns="yes" >
            </TableLayout>
        </ScrollView>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button"
            android:layout_span="2"
            android:layout_weight="1"
            android:textSize ="17sp" />
        
    </TableRow>

</TableLayout>


