<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.graphintegration.ConsistencyChecker"
    tools:ignore="MergeRootFrame" >

	<com.mindfusion.diagramming.DiagramView
	    android:id="@+id/touchpad1"
	    android:layout_width="450dp"
	    android:layout_height="285dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:contentDescription="@string/nothing"
	    tools:context=".GraphIntegration" />

    <Button
        android:id="@+id/button123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="29dp"
        android:layout_marginRight="22dp"
        android:text="@string/clean_tax_file" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/touchpad1"
        android:layout_marginLeft="16dp"
        android:text="@string/diagonistic_lattice" />

</RelativeLayout>