<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
           
            <TextView
            android:id="@+id/pickNodeTextView"
            android:text="@string/pickNode"
            android:textSize="15sp" 
            android:paddingRight="8dp"/>
            
            <Spinner
		        android:id="@+id/nodeSpinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		   />
        
        </TableRow>

        <TableRow
            android:id="@+id/emptyTableRow22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        	
        	<TextView
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   "
            android:textSize="13sp" />
 
            
        </TableRow>
        

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

	        <Button
	            android:id="@+id/highlightButton"
	            android:text="@string/highlight"
	            android:textSize="12sp" 
	            android:width="285dp"/>
	
	        <Button
	            android:id="@+id/dehighlightButton"
	            android:text="@string/dehighlight"
	            android:textSize="12sp" 
	            android:width="285dp"/>
         </TableRow>
         
         <TableRow
            android:id="@+id/emptyTableRow23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        	<TextView
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   "
            android:textSize="16sp" />
            
        </TableRow>

</LinearLayout>

